done for the evening

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     
 <footer>
-    Designed and Built by: Bohdan Mykytey 2019
+    Designed and Built by: Bohdan Mykytey 2019 Ⓡ
 </footer>
 </body>
 
